@@ -1,4 +1,6 @@
 1.1-dev
+ * (Hadoop) fix wide row iteration when last row read was deleted
+   (CASSANDRA-4154)
  * fix read_repair_chance to really default to 0.1 in the cli (CASSANDRA-4114)
  * Adds caching and bloomFilterFpChange to CQL options (CASSANDRA-4042)
  * Adds posibility to autoconfigure size of the KeyCache (CASSANDRA-4087)
